Updated various pages with small changes and improvements. Also fixed footer issue which was causing text to be covered, accessiability issue FIXED.

--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,13 @@ img {
 /* Footer styles */
 footer {
   background: #333;
-  color: #fff;
+  color: white;
   text-align: center;
   padding: 1em 0;
-  position: fixed;
-  bottom: 0;
+  position: static; /* Remove fixed positioning */
   width: 100%;
 }
+
 /* Navigation bar */
 nav {
   background-color: #333;
